welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
var x:Int = 0;
var c:Int = 0;
var o:Int = 0;
var z:Int = 0;
z = nums.length

for (i<- 0 to 3)
{
	if (nums(i) == 9)
	{
		c = c + 1;
	}
}
if (c > 0)
return true;
}